--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,6 +33,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
-    +materialized: table
+    marts: 
+      cores:
+        +materialized: table
+    staging:
+      +materialized: view
+    
+    
     # Config indicated by + and applies to all files under models/example/
 
